--- a/.env.defaults
+++ b/.env.defaults
@@ -11,7 +11,7 @@ DATABASE_URL=file:./dev.db
 
 # disables Prisma CLI update notifier
 PRISMA_HIDE_UPDATE_MESSAGE=true
-
+RD_API_URL=/api
 
 # Option to override the current environment's default api-side log level
 # See: https://redwoodjs.com/docs/logger for level options:
